[package]
name = "forge-testsuite"
version = "0.1.0"
authors = ["Polytope Labs <hello@polytope.technology>"]
description = "Utilities for writing and running solidity tests in rust"
edition = "2021"

[dependencies]
forge = { git = "https://github.com/polytope-labs/foundry", rev = "1ffcca7485e84a9a356c5adb619ee1f038295739" }
foundry-common = { git = "https://github.com/polytope-labs/foundry", rev = "1ffcca7485e84a9a356c5adb619ee1f038295739" }
foundry-config = { git = "https://github.com/polytope-labs/foundry", rev = "1ffcca7485e84a9a356c5adb619ee1f038295739" }
foundry-evm = { git = "https://github.com/polytope-labs/foundry", rev = "1ffcca7485e84a9a356c5adb619ee1f038295739" }
ethers = { git = "https://github.com/polytope-labs/ethers-rs", rev = "a61f4fd78cd9a417c74a1609e5007e17f0f0ebb4", features = ["ethers-solc"] }
ethers-solc = { git = "https://github.com/polytope-labs/ethers-rs", rev = "a61f4fd78cd9a417c74a1609e5007e17f0f0ebb4", features = ["svm-solc"] }
once_cell = "1.19.0"
