[package]
name = "forge-testsuite"
version = "0.1.0"
authors = ["Polytope Labs <hello@polytope.technology>"]
description = "Utilities for writing and running solidity tests in rust"
edition = "2021"

[dependencies]
forge = { git = "https://github.com/polytope-labs/foundry", rev = "521813b3ebaf1aa05055d1780b555f9001071514" }
foundry-common = { git = "https://github.com/polytope-labs/foundry", rev = "521813b3ebaf1aa05055d1780b555f9001071514" }
foundry-config = { git = "https://github.com/polytope-labs/foundry", rev = "521813b3ebaf1aa05055d1780b555f9001071514" }
foundry-evm = { git = "https://github.com/polytope-labs/foundry", rev = "521813b3ebaf1aa05055d1780b555f9001071514" }
ethers = { git = "https://github.com/polytope-labs/ethers-rs", rev = "a61f4fd78cd9a417c74a1609e5007e17f0f0ebb4", features = ["ethers-solc"] }
ethers-solc = { git = "https://github.com/polytope-labs/ethers-rs", rev = "a61f4fd78cd9a417c74a1609e5007e17f0f0ebb4", features = ["svm-solc"] }
once_cell = "1.19.0"
